--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<p>Nossos serviços oferecem uma conexão estável e confiável, garantindo que você esteja sempre conectado quando mais precisa.</p>
 			</div>
 			<div class="introducao-img">
-				<img src="./img/teste.jpg" alt="">
+				<img src="./img/fml.jpeg" alt="">
 			</div>
 		</div>
 	</div>
@@ -78,7 +78,7 @@
 			<div class="lojas-dados">
 				<p class="rua">Rua General Osório, 719</p>
 				<p class="cep">Centro Planalto - RS</p>
-				<p class="hora"><img src="./img/horario.svg" alt=""> 8h - 18h de seg. à dom.</p>
+				<p class="hora"><img src="./img/horario.svg" alt=""> 8h - 18h de seg. a dom.</p>
 			</div>
 
 		</div>
@@ -92,7 +92,7 @@
 				<p class="contato-p">Junte-se à nossa internet premium e conecte-se sem limites hoje</p>
 			</div>
 			<ul>
-				<li><a href="mailto:contato@conectplan.net.br">contato@conectplan.net.br</a></li>
+				<li><a href="https://portal.conectplan.net.br/">portal.conectplan.net.br</a></li>
 				<li><a href="tel:+55999212258">(55) 9 9921-2258</a></li>
 				<li><a href="https://www.instagram.com/conectplan/">@instagram</a></li>
 			</ul>
